--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-	"name": "Holy Unblocker",
-	"description": "Holy Unblocker is a secure web proxy service supporting numerous sites while concentrating on detail with design, mechanics, and features. Bypass web filters regardless of whether it is an extension or network-based.",
+	"name": "Sunblocker",
+	"description": "idc what u do, just dont be weird",
 	"repository": "https://github.com/e9x/website-aio",
 	"logo": "https://github.com/holy-unblocker/website/raw/branch/master/src/assets/hat.svg",
 	"keywords": ["holyunblocker", "titaniumnetwork"]
